--- a/shop.css
+++ b/shop.css
@@ -6,6 +6,8 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     background-color: #f0f0f0;
+
+
 }
 
 /* Product Carousel / Gallery */
@@ -23,7 +25,6 @@ body {
 .arrow {
     background-color: #e7e5e7;
     color: #3f3136;
-    ;
     border: none;
     padding: 10px 20px;
     cursor: pointer;
@@ -31,15 +32,16 @@ body {
 }
 
 .arrow:hover {
-    background-color: #555;
+    box-shadow: 0 0 15px #896279;
+    /* Glowing shadow */
+    background-color: rgb(#594F3B);
 }
 
 #selected-image {
     width: 500px;
     height: auto;
     margin: 0 20px;
-    border: 2px solid #c5adcf;
-    box-shadow: 2px 2px 6px #000000;
+    box-shadow: 2px 2px 6px #302f2f;
     border-radius: 8px;
 }
 
