--- a/shop.css
+++ b/shop.css
@@ -1,15 +1,3 @@
-* {
-    box-sizing: border-box;
-}
-
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    background-color: #f0f0f0;
-
-
-}
-
 /* Product Carousel / Gallery */
 .product-carousel-container {
     text-align: center;
@@ -61,12 +49,12 @@ body {
     width: 50px;
     height: 50px;
     cursor: pointer;
-    border: 2px solid #6c3b65;
+    border: 2px solid #776258;
     object-fit: cover;
 }
 
 .thumbnail:hover {
-    border-color: #f8c703;
+    border-color: #adb2d3;
 }
 
 /* <!----------------------------------💅PRODUCT GRID SECTION------------------------------------------------------ --> */
@@ -91,7 +79,7 @@ body {
     border-radius: 8px;
 }
 
-.add-to-cart-btn {
+.add-to-bag-btn {
     background-color: #000000;
     color: white;
     border: none;
