--- a/home.css
+++ b/home.css
@@ -68,3 +68,16 @@ main {
     box-shadow: 0 0 20px #ADB2D3;
     /* slight zoom on hover  */
 }
+
+.trending-products {
+    display: grid;
+    margin-top: 4rem;
+    padding: 2rem 0;
+    background-color: #fff5f8;
+}
+
+.trending-products h2 {
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 2rem;
+}
