--- a/global.css
+++ b/global.css
@@ -57,11 +57,24 @@ header {
 .login-btn {
     border: none;
     background: none;
+    border-radius: 8px;
+}
+
+.login-btn:hover {
+    box-shadow: 0 0 15px #896279;
+    /* Glowing shadow */
 }
 
 .shopping-bag-btn {
     border: none;
     background: none;
+    border-radius: 8px;
+
+}
+
+.shopping-bag-btn:hover {
+    box-shadow: 0 0 15px #896279;
+    /* Glowing shadow */
 }
 
 /* -------------------------style the title of my page---------- */
@@ -131,6 +144,28 @@ nav>ul>li>a {
     text-decoration: none;
 }
 
+.product-name {
+    min-height: 3em;
+    /* or adjust based on your font size */
+    display: block;
+}
+
+.shopping-bag-panel {
+    position: fixed;
+    top: 80px;
+    right: 20px;
+    width: 250px;
+    max-height: 400px;
+    overflow-y: auto;
+    background: white;
+    border: 1px solid #ccc;
+    border-radius: 8PX;
+    padding: 1rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 100;
+}
+
+
 footer {
     display: flex;
     flex-direction: column;
@@ -148,16 +183,3 @@ footer a:hover {
     font-weight: 700;
     transition: .5s;
 }
-
-/* Fade-in animation for page load
-@keyframes fadeIn {
-    0% {
-        opacity: 0;
-        transform: scale(0.95)
-    }
-
-    100% {
-        opacity: 1;
-        transform: scale(1);
-    }
-} */
